--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,3 +3,7 @@ services:
     image: nginx:latest
     ports:
       - "8080:80"
+    volumes:
+      - ./nginx/default.conf:/etc/nginx/conf.d/default.conf
+      - ./nginx/.htpasswd:/etc/nginx/.htpasswd
+      - ./html:/usr/share/nginx/html
