--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,6 +4,6 @@ services:
     ports:
       - "8080:80"
     volumes:
-      - ./nginx/default.conf:/etc/nginx/conf.d/default.conf
-      - ./nginx/.htpasswd:/etc/nginx/.htpasswd
-      - ./html:/usr/share/nginx/html
+      - ./config/nginx/default.conf:/etc/nginx/conf.d/default.conf
+      - ./config/nginx/.htpasswd:/etc/nginx/.htpasswd
+      - ./static/html:/usr/share/nginx/html
